--- a/package.json
+++ b/package.json
@@ -1,11 +1,43 @@
 {
-  "name": "cv",
+  "name": "template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "i18nline": "i18nline",
+    "i18n": "i18nline synch"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^1.0.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "json-loader": "^0.5.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "preact-cli": "^2.2.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "css-loader": "^2.1.0",
+    "i18nline": "^2.0.1",
+    "preact": "^8.4.2",
+    "preact-i18nline": "^2.0.0",
+    "preact-router": "^2.6.1",
+    "style-loader": "^0.23.1"
+  }
 }
