--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@babel/plugin-transform-react-jsx": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "base64-inline-loader": "^1.1.1",
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "json-loader": "^0.5.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "preact-cli": "^2.2.1",
+    "svg-inline-loader": "^0.8.0",
+    "svg-url-loader": "^2.3.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
